# mlNBA

./: README.md  README_NEW.md  RESUMEN_SISTEMA.md  analyze_player_zones.py  download_all_shots.py  download_shots.py  main.py  main_pipeline.py  nba_offline_loader.py  player_3pt_zones.csv  pyproject.toml  test_download.py
models/: nba_features_v2.joblib  nba_model_ensemble_v2.joblib  nba_model_logistic_regression_v2.joblib  nba_model_neural_network_v2.joblib  nba_model_random_forest_v2.joblib  nba_model_xgboost_v2.joblib  nba_scaler_v2.joblib
reports/: nba_eda_summary.txt  nba_prediction_report.txt  nba_prediction_report_v2.txt  optimized_features_v2.txt
src/: data_collector.py  eda.ipynb  eda_analyzer.py  ml_trainer.py  player_zones_analyzer.py  predictor.py  shots_downloader.py
