[project]
name = "mlnba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nba-api>=1.10.0",
    "numpy>=2.2.6",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.2",
    "scipy>=1.15.3",
    "scikit-learn>=1.7.1",
    "xgboost>=3.0.2",
    "joblib>=1.5.1",
    "statsmodels>=0.14.5",
]
